<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/canny_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/canny_borders"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/canny_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/canny_title">

            <EditText
                android:id="@+id/canny_border1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/default_canny_border1"
                android:textColor="#78909C"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/canny_border2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border2"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/default_canny_border2"
                android:textColor="#78909C"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/size_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/canny_layout" />

        <LinearLayout
            android:id="@+id/size_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_title">

            <EditText
                android:id="@+id/size_border1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/size_defalut"
                android:textColor="#78909C"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/size_border2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border2"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/size_defalut"
                android:textColor="#78909C"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/line_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/line_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_layout" />

        <LinearLayout
            android:id="@+id/color_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_color_title">

            <EditText
                android:id="@+id/color1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/default_color1"
                android:textColor="#78909C"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border2"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/default_color2"
                android:textColor="#78909C"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/color3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="border2"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@string/default_color1"
                android:textColor="#78909C"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/line_thickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/line_thickness"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_layout" />

        <SeekBar
            android:id="@+id/seekbar_thickness"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:max="5"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_thickness" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>